# TransferHero

./: .cursorrules  .gitignore  DESTINATION.md  README.md  ROADMAP.md  app.js  doors.md  index.html  json-box.css  package.json  process-gtfs.py  railway.json  react-migration.md  schedule-data.js  static-trips.js  tsconfig.base.json
data/: transfers.js  travel-times.js
flask/: web.py
gtfs_data/: download.sh
legacy/: app.js  config.example.js  index.html  json-box.css  segment-display-mockup.html  static-trips.js  style.css
legacy/data/: car-positions.js  line-config.js  stations.js
react/: GTFS_STATIC_TODO.md  TESTING.md  package-lock.json  package.json  test-car-positions.mjs  test-schedule-parse.mjs  test.mjs
scripts/: processExitData.ts
transfer-hero-init/: Cargo.toml
transfer-hero-init/src/: main.rs
