[package]
name = "transfer-hero-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.25"
serde = "1.0"
serde_json = "1.0"
[dependencies.rocket]
version = "0.5.0-rc.1" # or the version you are using
features = ["json"]